@@ -11,7 +11,7 @@
   - The Original Code is FoxReplace.
   -
   - The Initial Developer of the Original Code is Marc Ruiz Altisent.
-  - Portions created by the Initial Developer are Copyright (C) 2007-2013 the Initial Developer. All Rights Reserved.
+  - Portions created by the Initial Developer are Copyright (C) 2007-2014 the Initial Developer. All Rights Reserved.
   -
   - Contributor(s):
   -
@@ -34,6 +34,8 @@
     <preferences>
       <preference id="substitutionList" name="extensions.foxreplace.substitutionListJSON" type="unichar"/>
       <preference id="autoReplaceOnLoad" name="extensions.foxreplace.autoReplaceOnLoad" type="bool"/>
+      <preference id="autoReplacePeriodically" name="extensions.foxreplace.autoReplacePeriodically" type="bool"/>
+      <preference id="autoReplacePeriod" name="extensions.foxreplace.autoReplacePeriod" type="int"/>
       <preference id="replaceUrls" name="extensions.foxreplace.replaceUrls" type="bool"/>
       <preference id="replaceScripts" name="extensions.foxreplace.replaceScripts" type="bool"/>
       <preference id="enableSubscription" name="extensions.foxreplace.enableSubscription" type="bool"/>
@@ -99,6 +101,12 @@
     <separator/>
     <checkbox id="autoReplaceOnLoadCheckBox" label="&autoReplaceOnLoad.label;" accesskey="&autoReplaceOnLoad.accesskey;" preference-editable="true"
               preference="autoReplaceOnLoad"/>
+    <hbox align="center">
+      <checkbox id="autoReplacePeriodicallyCheckBox" label="&autoReplacePeriodically.label;" accesskey="&autoReplacePeriodically.accesskey;"
+                preference-editable="true" preference="autoReplacePeriodically"/>
+      <textbox id="autoReplacePeriodTextBox" type="number" min="1" max="3600" maxlength="4" size="4" preference-editable="true" preference="autoReplacePeriod"/>
+      <label id="autoReplacePeriodLabel" control="autoReplacePeriodTextBox" value="&autoReplacePeriod.label;" accesskey="&autoReplacePeriod.accesskey;"/>
+    </hbox>
     <checkbox id="replaceUrlsCheckBox" label="&replaceUrls.label;" accesskey="&replaceUrls.accesskey;" preference-editable="true" preference="replaceUrls"/>
     <checkbox id="replaceScriptsCheckBox" label="&replaceScripts.label;" accesskey="&replaceScripts.accesskey;" preference-editable="true"
               preference="replaceScripts"/>
