@@ -3,6 +3,7 @@
 * Unconfirmed changes (i.e. additions or editions) in substitution groups are automatically confirmed when pressing the dialog OK button (issue 125).
 * The replace bar is hidden when the ESC key is pressed (issue 107).
 * Pressing the return key when focus is in one of the text fields applies the replace bar substitution (issue 107).
+* New option to periodically apply the substitution list (issue 129). This allows to overcome the limitation with dynamic content in some cases.
 
 v0.15.0 (2013-08-03)
 * Textboxes in the replace bar use as much width as they can.
